--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,6 @@
     <string name="pref_groupEnabled">Enable This Group</string>
     <string name="pref_groupAppsInGroup">Select Apps for this Group</string>
     <string name="save_this_group">Save These Settings</string>
+    <string name="appicon">appIcon</string>
 
 </resources>
