--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
     <string name="pref_groupAppsInGroup">Select Apps for this Group</string>
     <string name="save_this_group">Save These Settings</string>
     <string name="appicon">appIcon</string>
+    <string name="group_name">Group Name:</string>
 
 </resources>
