--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="version">MissileLauncher Version</string>
-    <string name="versionNum">1.0.6</string>
+    <string name="versionNum">1.0.7</string>
 
 
     <string name="app_name">MissileLauncher</string>
@@ -88,6 +88,7 @@
     <string name="pref_group6">Group 6 Settings</string>
     <string name="pref_group7">Group 7 Settings</string>
     <string name="pref_groupEnabled">Enable This Group</string>
+    <string name="pref_groupIcon">Select Icon for this Group</string>
     <string name="pref_groupAppsInGroup">Select Apps for this Group</string>
     <string name="save_this_group">Save Selected Apps</string>
     <string name="appicon">appIcon</string>
@@ -95,5 +96,7 @@
     <string name="enable_missilelauncher">Enable MissileLauncher</string>
     <string name="settings">Settings</string>
     <string name="show_ungrouped_apps_only">Show UnGrouped Apps Only</string>
+    <string name="foreground_text_message">This notification will make sure I keep working.</string>
+    <string name="show_notification_text">Show Notification (app may stop working if this is disabled)</string>
 
 </resources>
