--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="version">MissileLauncher Version</string>
-    <string name="versionNum">1.0.14</string>
+    <string name="versionNum">1.0.15</string>
 
 
     <string name="app_name">MissileLauncher</string>
@@ -11,6 +11,9 @@
 
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
+    <string name="numGroupsLocked">Number of Groups. 4+ Requires unlock</string>
+    <string name="numGroupsUnlocked">Number of Groups.</string>
+
     <string name="pref_group1">Group 1 Settings</string>
     <string name="pref_group2">Group 2 Settings</string>
     <string name="pref_group3">Group 3 Settings</string>
@@ -30,5 +33,8 @@
     <string name="foreground_text_message1">This notification will make sure I keep working.</string>
     <string name="foreground_text_message2">It can be disabled in the app.</string>
     <string name="show_notification_text">Show Notification (app may stop working if this is disabled)</string>
+    <string name="AutoSortLocked">AutoSort    -Requires Unlock</string>
+    <string name="AutoSortUnlocked">AutoSort all apps</string>
+    <string name="NetworkLost">Network Connectivity lost.  Please try again with a more stable network.</string>
 
 </resources>
