--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="version">MissileLauncher Version</string>
-    <string name="versionNum">1.0.15</string>
+    <string name="versionNum">1.0.16</string>
 
 
     <string name="app_name">MissileLauncher</string>
@@ -36,5 +36,6 @@
     <string name="AutoSortLocked">AutoSort    -Requires Unlock</string>
     <string name="AutoSortUnlocked">AutoSort all apps</string>
     <string name="NetworkLost">Network Connectivity lost.  Please try again with a more stable network.</string>
+    <string name="OKtoCloseModal">You can close this window, I will continue to work in the background.</string>
 
 </resources>
